--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 			$("#languages").multiselect({
 				remoteUrl: "ajax.php"
 			});
-
-			// only if the function is available...
-			if ($.fn.themeswitcher) {
+		});
+		// add themeswitcher
+		$.getScript('http://ui.jquery.com/applications/themeroller/themeswitchertool/', function() {
+			$(function(){
 				$('#switcher')
 					.before('<h4>Use the themeroller to dynamically change look and feel</h4>')
-					.themeswitcher();
-			}
+					.themeswitcher(); 
+			});
 		});
 	</script>
 	<script type="text/javascript" src="js/page.js"></script>
@@ -278,7 +279,6 @@
 			</div>
 		</div>
 
-		<script type="text/javascript" src="http://jqueryui.com/themeroller/themeswitchertool/"></script>
 		<div id="switcher"></div>
 		 
 		<h2>Features</h2>
